[ticket/15212] Fix code box double horizontal scrollbars
The code box has two overflow properties set,
one on the code element and one on the parent div container,
causing double horizontal scrollbars.

PHPBB3-15212

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -516,7 +516,7 @@ blockquote .codebox {
 	display: block;
 	height: auto;
 	max-height: 200px;
-	padding: 8px 3px 5px 3px;
+	padding: 8px 3px;
 	font: 0.9em Monaco, "Andale Mono","Courier New", Courier, monospace;
 	line-height: 1.3em;
 }
